# rose_joystick

./: CMakeLists.txt  package.xml
doc/: spacenav.odt  speedlink_strike.odt  thrustmaster.odt
launch/: attack3.launch  gui_arrows.launch  logitech_rumble2.launch  spacenav.launch  speedlink.launch  thrustmaster.launch
msg/: available_modes.msg
param/: gui_arrows.yaml  logitech_attack_3.yaml  logitech_rumble2.yaml  spacenav.yaml  speedlink_strike.yaml  thrustmaster_t_flight-stick_x.yaml
src/: arm.py  arm_submodes.py  arms.py  base.py  interpreter.py  lift.py  neck.py  teleop.py
srv/: switch_joystick_mode.srv
